Changed: FriendlyWrapper creates generic types dynamically

--- a/Friendly.FormHelper/packages.config
+++ b/Friendly.FormHelper/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Codeer.Friendly" version="2.1.0" targetFramework="net45" />
   <package id="Codeer.Friendly.Windows" version="2.1.0" targetFramework="net45" />
+  <package id="LangExt" version="2.1.0.0" targetFramework="net45" />
 </packages>
