Change to use auto-generated clone interfaces.
(Some tests are deleted)

--- a/Friendly.FormHelper/Friendly.FormHelper.csproj
+++ b/Friendly.FormHelper/Friendly.FormHelper.csproj
@@ -59,6 +59,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\InterfaceGenerator\InterfaceGenerator.csproj">
+      <Project>{4332D1E6-665E-491D-9800-577B28537741}</Project>
+      <Name>InterfaceGenerator</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
