--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -59,6 +59,8 @@
     <Compile Include="ChainingAssertion.MSTest.cs" />
     <Compile Include="Formのメソッドライクにフレンドリーが呼び出せるかテスト.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TypeParser.cs" />
+    <Compile Include="TypeWrapper.cs" />
     <Compile Include="クローンインターフェース作成テスト.cs" />
   </ItemGroup>
   <ItemGroup>
